feat(bot): implement intelligent shooting strategy with hunting modes
    Added advanced bot behavior logic via the HUNTER class:
    - Implemented 3 shooting modes: random search (1), hunt (2), pursuit (3)
    - Upon hit, targets are automatically generated around the damaged ship
    - After the second hit, the ship's direction is determined for a pinpoint finish-off
    - After the ship is sunk, the system resets to random search mode
    - Added a system of priority targets via possibleTargets
    - Implemented methods:
            • updateTargetMap() - update the state after a shot
            • generatePossibleTargets() - define a search zone
            • filterPossibleTargets() - focus on the ship's direction
            • getNextTarget() - intelligently select the next target

    Now the bot uses advanced tactics instead of random shots